# FlightCap

./: .gitignore  README.md
applications/flightcap-axy/: CMakeLists.txt  prj.conf  sample.yaml
applications/flightcap-axy/src/: lis2dh12_zephyr.c  lis2dh12_zephyr.h  main.c
applications/flightcap-ble-test/: CMakeLists.txt  prj.conf  sample.yaml
applications/flightcap-ble-test/src/: main.c
applications/flightcap-blink/: CMakeLists.txt  prj.conf  sample.yaml
applications/flightcap-blink/src/: main.c
applications/flightcap-demo/: CMakeLists.txt  prj.conf  sample.yaml
applications/flightcap-demo/src/: main.c
applications/flightcap-mem/: CMakeLists.txt  prj.conf  sample.yaml
applications/flightcap-mem/src/: main.c
applications/flightcap-prod/: CMakeLists.txt  README.md  prj.conf  sample.yaml
applications/flightcap-prod/src/: dfu_mode.c  dfu_mode.h  main.c  prod_state.c  prod_state.h  telemetry_adv.c  telemetry_adv.h  vl53l4cd_filter.h  vl53l4cd_zephyr.c  vl53l4cd_zephyr.h
applications/flightcap-prod/sysbuild/: mcuboot.conf
applications/juxta5-8-prod/: CMakeLists.txt  README.md  prj.conf  sample.yaml
applications/juxta5-8-prod/sysbuild/: mcuboot.conf
boards/NeurotechHub/FlightCap_nRF52833/: FlightCap_nRF52833-pinctrl.dtsi  FlightCap_nRF52833.dts  FlightCap_nRF52833.yml  FlightCap_nRF52833_defconfig  Kconfig.FlightCap_nRF52833  board.yml  pre_dt_board.cmake
boards/NeurotechHub/FlightCap_nRF52840/: FlightCap_nRF52840-pinctrl.dtsi  FlightCap_nRF52840.dts  FlightCap_nRF52840.yml  FlightCap_nRF52840_defconfig  Kconfig.FlightCap_nRF52840  board.cmake  board.yml
docs/: FlightCap_BLE_Spec.md
lib/flightcap_hw/: flightcap_hw.c  flightcap_hw.h
lib/lis2dh12/: lis2dh12_reg.c  lis2dh12_reg.h  lis2dh12_zephyr.c  lis2dh12_zephyr.h
lib/spi_nor/: spi_nor_zephyr.c  spi_nor_zephyr.h
lib/vbatt/: vbatt_zephyr.c  vbatt_zephyr.h
lib/vl53l4cd/: tof_distance_filter.c  tof_distance_filter.h  vl53l0x_zephyr.c  vl53l0x_zephyr.h  vl53l4cd_filter.c  vl53l4cd_filter.h
